--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "test": "elm-test",
+    "test": "elm-test --fuzz 1000",
     "dev": "elm-test --watch"
   },
   "dependencies": {},
